@@ -1,0 +1,5 @@
+// somewhat contrived, but i came across a real-life file that caused this
+// crash.
+value=
+hello/
+world;
